add 'langauge settings' link to the translate bubble advanced view

BUG=611268

Review-Url: https://codereview.chromium.org/1975653002
Cr-Commit-Position: refs/heads/master@{#401635}

Former-commit-id: e83e46d01ab24945c9e1e3b456e5ecdb2c2a373a